2010-08-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/emu/getroot.c (find_mount_point_from_dir): Compile only if
	[HAVE_LIBZFS && HAVE_LIBNVPAIR]

2010-08-01  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in: Remove ${efi_dir} after building efi.img.

2010-08-01  Colin Watson  <cjwatson@ubuntu.com>

	* script/yylex.l (NAME): Remove [:digit:], redundant with [:alnum:].

2010-08-01  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Simple configuration): Document GRUB_CMDLINE_XEN
	and GRUB_CMDLINE_XEN_DEFAULT.  Recommend setting
	GRUB_GFXPAYLOAD_LINUX=text rather than unsetting it in order to
	disable gfxpayload.
	(Shell-like scripting): Add real content.
	(Serial terminal): Suggest `terminal_input serial; terminal_output
	serial' rather than putting the two commands on separate lines,
	since console input will be inoperative after the first command.
	(menuentry): Document --class, --users, and --hotkey options.
	(terminfo): Describe what `visually-ordered UTF-8' means (thanks,
	Vladimir Serbinenko).

2010-08-01  Vladimir Serbinenko  <phcoder@gmail.com>
2010-08-01  Colin Watson  <cjwatson@ubuntu.com>

	* kern/misc.c (grub_memset): Optimise to reduce cache stalls.

2010-08-01  Robert Millan  <rmh@gnu.org>

	Prevent accidental use of uninitialized libzfs_handle.

	* util/grub-probe.c (main): Move grub_util_init_libzfs() call to ...
	* kern/emu/getroot.c (find_root_device_from_libzfs): ... here.
	* util/misc.c (grub_util_init_libzfs): Make this function idempotent.

2010-08-01  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/20_linux_xen.in: Don't use UUID for LVM root (matching
	util/grub.d/10_linux.in).  Fixes Debian bug #591093.

2010-08-01  Robert Millan  <rmh@gnu.org>

	* kern/emu/getroot.c: Include `<grub/util/misc.h>'.

2010-07-31  Robert Millan  <rmh@gnu.org>

	* util/grub.d/10_kfreebsd.in: Make module handling more generic.

2010-07-31  Robert Millan  <rmh@gnu.org>

	* kern/emu/misc.c: Add missing license header.
